# SSH-server_client-Project

./: CMakeLists.txt  README.md  client.cpp  server.cpp
tcpclient/: CMakeLists.txt  tcpclient.cpp  tcpclient.h
tcpclient/linux/: linux.cpp  linux.h
tcpserver/: CMakeLists.txt  tcpserver.cpp  tcpserver.h
tcpserver/linux/: linux.cpp  linux.h
